[gd_scene load_steps=2 format=3 uid="uid://bxvxb8ixqwqyh"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_0hdqr"]

[node name="Main" type="Node"]
script = ExtResource("1_0hdqr")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameHUD" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MobileControls" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameWorld" type="Node2D" parent="."]

[node name="Field" type="Node2D" parent="GameWorld"]

[node name="Players" type="Node2D" parent="GameWorld"]

[node name="Effects" type="Node2D" parent="GameWorld"]